{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 271,
  "lineage": "8e848a5b-b4c7-6053-ba8f-1a8472c2a141",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:internet-gateway/igw-00b73fd3599641b30",
            "id": "igw-00b73fd3599641b30",
            "owner_id": "667563228432",
            "tags": {
              "Name": "internetgw"
            },
            "tags_all": {
              "Name": "internetgw"
            },
            "vpc_id": "vpc-05ef407c8f30db6d9"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "abdloadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "test-tf-test-bucket",
                "enabled": true,
                "prefix": "test-alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/test-alb/18c81556a01e8c81",
            "arn_suffix": "app/test-alb/18c81556a01e8c81",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-alb-429338147.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/test-alb/18c81556a01e8c81",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a297d2bbfe09ec98"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f1f6dd4a45d445e"
              },
              {
                "subnet_id": "subnet-0cfd8e89fb6624407"
              }
            ],
            "subnets": [
              "subnet-07f1f6dd4a45d445e",
              "subnet-0cfd8e89fb6624407"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-05ef407c8f30db6d9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.testdemobucket",
            "aws_security_group.securitygroup",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "testlistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:listener/app/test-alb/18c81556a01e8c81/90c364eb6ebff3ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/testargetgp-tgp/34a557d03954562e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:listener/app/test-alb/18c81556a01e8c81/90c364eb6ebff3ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:loadbalancer/app/test-alb/18c81556a01e8c81",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.abdloadbalancer",
            "aws_lb_target_group.testtargetgrp",
            "aws_s3_bucket.testdemobucket",
            "aws_security_group.securitygroup",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testtargetgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/testargetgp-tgp/34a557d03954562e",
            "arn_suffix": "targetgroup/testargetgp-tgp/34a557d03954562e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667563228432:targetgroup/testargetgp-tgp/34a557d03954562e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "testargetgp-tgp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05ef407c8f30db6d9"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:route-table/rtb-01679db0de30a08a6",
            "id": "rtb-01679db0de30a08a6",
            "owner_id": "667563228432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b73fd3599641b30",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable"
            },
            "tags_all": {
              "Name": "routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ef407c8f30db6d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internetgw",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4c86c317d610bf5",
            "route_table_id": "rtb-01679db0de30a08a6",
            "subnet_id": "subnet-07f1f6dd4a45d445e"
          },
          "dependencies": [
            "aws_internet_gateway.internetgw",
            "aws_route_table.routetable",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:security-group/sg-0a297d2bbfe09ec98",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a297d2bbfe09ec98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_securitygroup",
            "name_prefix": "",
            "owner_id": "667563228432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ef407c8f30db6d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-0cfd8e89fb6624407",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfd8e89fb6624407",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesubnet"
            },
            "tags_all": {
              "Name": "privatesubnet"
            },
            "vpc_id": "vpc-05ef407c8f30db6d9"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:subnet/subnet-07f1f6dd4a45d445e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f1f6dd4a45d445e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667563228432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet"
            },
            "tags_all": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-05ef407c8f30db6d9"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcmain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667563228432:vpc/vpc-05ef407c8f30db6d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bddd96aae7103edc",
            "default_route_table_id": "rtb-03bd436b1f67deb04",
            "default_security_group_id": "sg-06dc00ccfa3ae823b",
            "dhcp_options_id": "dopt-0f6d0758a45b38af5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ef407c8f30db6d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bd436b1f67deb04",
            "owner_id": "667563228432",
            "tags": {
              "Name": "vpcmain"
            },
            "tags_all": {
              "Name": "vpcmain"
            }
          }
        }
      ]
    }
  ]
}